# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-08-29
# --------------------------------------------------------------------
# V switch to branch 71
# + cut release v7.0


# 2017-07-26
# --------------------------------------------------------------------
# + new backgrounds705 to test out broken chain lsveto
# + generate broken chains for the lsveto MC
# ~ regenerate the pmtPb210_GRND because it was using wrong files
# ~ tweaked readFile() so the # search is after the """ search
# ~ modify updateBkgsFile70() to exclude lines between the """


# 2017-07-13
# --------------------------------------------------------------------
# ~ internal K40 too low - testing out fit with fixing K40 activity
# ~ more fine tuning of C7 fit - no fit bounds hit limits this time
# ~ tweaked updateBkgsFile70() to handle new fit results format
# + new MC - split pmt U238 at the Ra226 level
# ~ did a bit of code clean up
# ~ scale errors correctly for the residual plots
# ~ put H3 in cosmo group
# + add errors just to data and set to 0 for the residual
# ~ more fine tuning of the C7 fit


# 2017-07-12
# --------------------------------------------------------------------
# + add warnings when fits are to the limit
# ~ fixed BIG bug with fitting lower bound
# ~ had to tweak the chans handling a bit
# + add uniqString() to unique 'SM' and 'S' for example
# ~ make separate fitchans and pltchans options
# ~ (evt_Type > 10) still works with new rootfiles
# + add I126 and Te121 to cosmo group
# ~ primParticalName is 'triton' for H3
# ~ tweaks to buildMC70() to get Cd109 and H3 working
# + new paths to pushpa's Cd109 and H3


# 2017-07-11
# --------------------------------------------------------------------